opam-version: "2.0"
name: "coq-utils"
synopsis: "Additional libraries for coq"
maintainer: "arthur.aa@gmail.com"
authors: "Arthur Azevedo de Amorim"
license: "MIT"
homepage: "https://github.com/arthuraa/coq-utils"
bug-reports: "https://github.com/arthuraa/coq-utils/issues"
depends: [
  "ocaml"
  "coq" {(>= "8.10" & < "8.13~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "1.9" & < "1.12~") | (= "dev")}
  "coq-mathcomp-fingroup" {(>= "1.9" & < "1.12~") | (= "dev")}
  "coq-mathcomp-algebra" {(>= "1.9" & < "1.12~") | (= "dev")}
  "coq-deriving" {= "dev"}
  "coq-extructures" {(>= "0.2.0" & < "0.3~") | (= "dev")}
]
flags: light-uninstall
build: [
  [make "-j%{jobs}%"]
]
install: [make "install"]
remove: ["rm" "-R" "%{lib}%/coq/user-contrib/CoqUtils"]
dev-repo: "git+https://github.com/arthuraa/coq-utils.git"
url {
  src:
    "git+https://github.com/arthuraa/coq-utils.git"
}
